added prettier #patch

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,6 +27,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Run formatter tests
+        run: npm run prettier:ci
+
       # - name: Run lint tests
       #   run: npm run lint
 
