--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "cleanup": "nuxt cleanup",
-    "typecheck": "nuxt typecheck"
+    "typecheck": "nuxt typecheck",
+    "prettier": "prettier --write .",
+    "prettier:ci": "prettier --check ."
   },
   "devDependencies": {
     "@intlify/unplugin-vue-i18n": "^0.9.1",
     "@types/node": "^18.14.0",
     "nuxt": "^3.2.2",
+    "prettier": "^2.8.7",
     "semantic-ui-css": "^2.5.0",
     "vue-tsc": "^1.1.3"
   },
