--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "postinstall": "nuxt prepare",
     "cleanup": "nuxt cleanup",
     "typecheck": "nuxt typecheck",
+    "lint": "npm run lint:ci -- --fix",
+    "lint:ci": "eslint . --no-eslintrc --config .eslintrc.js --max-warnings 0 --exit-on-fatal-error",
     "prettier": "prettier --write .",
     "prettier:ci": "prettier --check ."
   },
   "devDependencies": {
     "@intlify/unplugin-vue-i18n": "^0.9.1",
+    "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@types/node": "^18.14.0",
+    "eslint": "^8.37.0",
+    "eslint-config-prettier": "^8.8.0",
     "nuxt": "^3.2.2",
     "prettier": "^2.8.7",
     "semantic-ui-css": "^2.5.0",
