--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@types/node": "^18.14.0",
     "eslint": "^8.37.0",
     "eslint-config-prettier": "^8.8.0",
-    "nuxt": "^3.2.2",
+    "nuxt": "^3.4.1",
     "prettier": "^2.8.7",
     "semantic-ui-css": "^2.5.0",
     "vue-tsc": "^1.1.3"
@@ -26,11 +26,11 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^36.0.1",
     "@ckeditor/ckeditor5-vue": "^4.0.1",
-    "@hennihaus/bamconfigbackend": "^10.0.0",
-    "@vee-validate/i18n": "^4.7.4",
-    "@vee-validate/rules": "^4.7.4",
+    "@hennihaus/bamconfigbackend": "^10.0.3",
+    "@vee-validate/i18n": "^4.8.6",
+    "@vee-validate/nuxt": "^4.8.6",
+    "@vee-validate/rules": "^4.8.6",
     "uuid": "^9.0.0",
-    "vee-validate": "^4.7.4",
     "vue-dompurify-html": "^4.0.0",
     "vue-i18n": "^9.2.2"
   }
